devops/gitops/mgmg/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mgmg
  namespace: default
spec:
  ports:
  - port: 80
    targetPort: 3000
  selector:
    app: mgmg
