devops/gitops/mgmg/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mgmg
  namespace: default
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  rules:
  - host: api.mgmg.life
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mgmg
            port:
              number: 80
  tls:
  - secretName: cert-wildcard
    hosts:
    - api.mgmg.life
